--- a/eoltimify/static/html/eoltimify.html
+++ b/eoltimify/static/html/eoltimify.html
@@ -2,7 +2,7 @@
    <h2>{{xblock.display_name}}</h2>
    {% if is_course_staff %}
       <div class="eoltimify_data_instructor">
-         <input type="button" name="show" value="Ver Puntaje" />
+         <input id="quilgo_button" type="button" name="show" value="Ver Puntaje" />
       </div>
       <div id="timify_loading_ui" class="ui-loading is-hidden">
          <p>
